# rune

./: .gitignore  404.html  CLAUDE.md  Makefile  PROJECT_OVERVIEW.md  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
article/: index.html
assets/: academic.css  custom.css  mathjax-config.js
components-overview/: index.html
docs/: components-overview.md  implementation-plan.md  index.md  math-datasets-overview.md  onboarding.md  openapi.json  rune-methodology.md  swarm-architecture.md  testing-guide.md
implementation-plan/: index.html
infra/: README.md  docker-compose.yml
instructions/: mining_repos.json
libs/adapter-registry/: README.md  mkdocs.yml  pyproject.toml
libs/adapter-registry/docs/api/: index.md
libs/adapter-registry/src/adapter_registry/: __init__.py  exceptions.py  models.py  registry.py
libs/adapter-registry/tests/: conftest.py  test_importability.py  test_registry.py
libs/evaluation/: README.md  mkdocs.yml  pyproject.toml
libs/evaluation/docs/api/: index.md
libs/evaluation/src/evaluation/: .gitignore  __init__.py  benchmark_runner.py  config.py  download_data.py  metrics.py  ood_benchmark.py  utils.py
libs/evaluation/src/evaluation/benchmarks/: __init__.py  adapter_stack.py  aggregator.py  apps.py  bigcodebench.py  codecontests.py  ds1000.py  humaneval.py  livecodebench.py  mbpp.py  protocol.py  runner.py  swe_bench.py
libs/evaluation/src/evaluation/configs/: daft_math_qwen.yaml  gemma4_olym_hard.yaml  gpt_oss_olym_hard.yaml  math_datasets.yaml  multi_dataset_sweep.yaml  qwen3_5_olym_easy.yaml  qwen3_5_vllm_server.yaml
libs/evaluation/src/evaluation/data/: humaneval_subset.json  ood_tasks.json
libs/evaluation/tests/: conftest.py  test_adapter_stack.py  test_aggregator.py  test_apps_adapter.py  test_bigcodebench_adapter.py  test_codecontests_adapter.py  test_ds1000_adapter.py  test_humaneval_adapter.py  test_livecodebench_adapter.py  test_load_problems.py  test_mbpp_adapter.py  test_metrics.py  test_ood_benchmark.py  test_protocol.py  test_runner.py  test_swe_bench_adapter.py
libs/evaluation/tests/fixtures/: .gitignore  apps_mini.parquet  bigcodebench_mini.parquet  codecontests_mini.parquet  ds1000_mini.parquet  humaneval_mini.parquet  livecodebench_mini.parquet  mbpp_mini.parquet  swe_bench_lite_mini.parquet
libs/events-py/: README.md  mkdocs.yml  pyproject.toml
libs/events-py/docs/api/: index.md
libs/events-py/src/events_py/: __init__.py  models.py
libs/events-py/tests/: __init__.py  conftest.py  test_models.py
libs/inference/: README.md  mkdocs.yml  pyproject.toml
libs/inference/docs/api/: index.md
libs/inference/src/inference/: __init__.py  adapter_loader.py  benchmark_backends.py  completion.py  exceptions.py  factory.py  hf_inference.py  llamacpp_provider.py  loaders.py  ollama_provider.py  provider.py  transformers_provider.py  vllm_provider.py
libs/inference/tests/: conftest.py  test_adapter_loader.py  test_completion.py  test_factory.py  test_ollama_provider.py  test_provider.py  test_transformers_provider.py  test_vllm_provider.py
libs/shared/: README.md  mkdocs.yml  pyproject.toml
libs/shared/docs/api/: index.md
libs/shared/src/shared/: __init__.py  blackboard.py  checkpoint_db.py  executor.py  hardware.py  lazy_cache.py  math_retriever.py  mathbox.py  models.py  pipeline_config.py  rune_models.py  sandbox.py  storage_utils.py  template_loader.py  tools.py
libs/shared/src/shared/templates/: code.j2  code_continue.j2  code_repair.j2  code_retry.j2  decompose.j2  diagnose.j2  integrate.j2  math_prompt.j2  math_prompt_v2.j2  placeholder_system.j2  plan.j2  prompt_code.j2  prompt_code_continue.j2  prompt_code_repair.j2  prompt_code_retry.j2  prompt_decompose.j2  prompt_decompose_concise.j2  prompt_diagnose.j2  prompt_integrate.j2  prompt_integrate_retry.j2  prompt_plan.j2
libs/shared/tests/: conftest.py  test_blackboard.py  test_checkpoint_db.py  test_hardware.py  test_mathbox.py  test_pipeline_config.py  test_rune_models.py  test_sandbox.py  test_template_limits.py
scripts/: benchmark_challenging.py  bootstrap.py  build_docs.py  chat_agent.py  chat_agent_setup.sh  check-all.sh  compare_output.py  create-service.sh  demo_project.py  demo_run.py  e2e_benchmark.py  e2e_inference_smoke.py  e2e_sakana.py  e2e_smoke.py  e2e_test.py  e2e_training_smoke.py  evaluate_round2.py  experiment_harness.py  generate_benchmark_fixtures.py  generate_components_overview.py  hf_inference.py  kill-running-processes.sh  math_eval.py  mine_and_upload.sh  (+24 more)
services/agent-a-service/: README.md  mkdocs.yml  pyproject.toml
services/agent-a-service/docs/api/: index.md
services/agent-a-service/src/agent_a_service/: __init__.py  nodes.py
services/api-service/: README.md  alembic.ini  mkdocs.yml  pyproject.toml
services/api-service/alembic/: env.py
services/api-service/docs/api/: index.md
services/api-service/scripts/: export_openapi.py
services/api-service/src/api_service/: __init__.py  dependencies.py  main.py  storage.py
services/api-service/src/api_service/routers/: __init__.py  adapters.py  sessions.py
services/api-service/tests/: conftest.py  test_adapters.py  test_example_integration.py  test_example_mocking.py  test_example_unit.py  test_sessions.py
services/rune-agent/: README.md  mkdocs.yml  pyproject.toml
services/rune-agent/docs/api/: index.md
services/rune-agent/src/rune_agent/: __init__.py  graph.py  nodes.py  state.py
services/rune-agent/tests/: conftest.py  test_graph.py  test_importability.py  test_nodes.py
services/training-svc/: README.md  mkdocs.yml  pyproject.toml
services/training-svc/docs/api/: index.md
services/training-svc/src/training_svc/: __init__.py  dependencies.py  jobs.py  main.py  models.py  schemas.py  storage.py
services/training-svc/src/training_svc/routers/: __init__.py  training.py
services/training-svc/tests/: conftest.py  test_importability.py  test_training.py
(+1616 files in other folders)
