[project]
name = "evaluation"
version = "0.1.0"
description = "Metrics and reporting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "pandas>=2.0.0",
    "datasets>=4.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src"]
testpaths = ["tests"]
addopts = "--cov=evaluation --cov-branch --cov-report=term-missing"

[tool.uv.sources]
shared = { workspace = true }
