[project]
name = "evaluation"
version = "0.1.0"
description = "Metrics and reporting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "inference",
    "adapter-registry",
    "pandas>=2.0.0",
    "datasets>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src", "../inference/src", "../adapter-registry/src"]

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*", "pandas", "pandas.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src", "../inference/src", "../adapter-registry/src"]
testpaths = ["tests"]
addopts = "--cov=evaluation --cov-branch --cov-report=term-missing"

[tool.uv.sources]
shared = { workspace = true }
inference = { workspace = true }
adapter-registry = { workspace = true }
