[project]
name = "inference"
version = "0.1.0"
description = "Shared inference library for model loading and agent factories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src"]
testpaths = ["tests"]
addopts = "--cov=inference --cov-branch --cov-report=term-missing"
asyncio_mode = "auto"

[tool.uv.sources]
shared = { workspace = true }
