[project]
name = "shared"
version = "0.1.0"
description = "Shared models and utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.16",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
force-include = { "src/shared/templates" = "shared/templates" }

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=shared --cov-branch --cov-report=term-missing"
