[project]
name = "agent-a-service"
version = "0.1.0"
description = "Template Agent A Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "inference",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_a_service"]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src", "../inference/src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src", "../inference/src"]
testpaths = ["tests"]
addopts = "--cov=agent_a_service --cov-branch --cov-report=term-missing"

[tool.uv.sources]
shared = { workspace = true }
inference = { workspace = true }
