[project]
name = "api-service"
version = "0.1.0"
description = "FastAPI Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "inference",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_service"]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src", "../inference/src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src", "../inference/src"]
testpaths = ["tests"]
# Coverage is optional - use `pytest --cov=api_service` to enable
addopts = "-n auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, API endpoints)",
    "e2e: End-to-end tests (complete workflows)",
]
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",
    "ignore:Use 'content=<...>' to upload raw bytes:DeprecationWarning:httpx",
]

[tool.uv.sources]
shared = { workspace = true }
inference = { workspace = true }
