[project]
name = "rune-agent"
version = "0.1.0"
description = "Rune coding agent service — recursive code generation with parametric memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "inference",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rune_agent"]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src", "../inference/src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src", "../inference/src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=rune_agent --cov-branch --cov-report=term-missing"

[tool.uv.sources]
shared = { workspace = true }
inference = { workspace = true }
